--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,8 +10,11 @@ spring:
   cloud:
     config:
       server:
-        native:
-          search-locations: classpath:/properties
+        git:
+          uri: https://github.com/now-start/config-service
+          search-paths: src/main/resources/properties/*
+          default-label: main
+
 
 
 eureka:
