--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,11 +21,11 @@ eureka:
       management.port: ${management.server.port}
   client:
     service-url:
-      defaultZone: ${SERVICE_URL:http://localhost:8761/eureka}
+      defaultZone: ${SERVICE_URL:}
 
 management:
   server:
-    port: 8081
+    port: 0
   endpoints:
     web:
       exposure:
@@ -46,5 +46,3 @@ logging:
     path: ./logs
   charset:
     file: UTF-8
-
-
