--- a/src/main/resources/config/common/application.yaml
+++ b/src/main/resources/config/common/application.yaml
@@ -8,7 +8,7 @@ eureka:
       management.port: ${management.server.port}
   client:
     service-url:
-      defaultZone: ${SERVICE_URL:http://eureka:8761/eureka}
+      defaultZone: ${SERVICE_URL:}
 
 management:
   server:
