--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.0'
-    id 'io.spring.dependency-management' version '1.1.6'
+    id 'io.spring.dependency-management' version '1.1.7'
+    id 'com.gorylenko.gradle-git-properties' version '2.5.0'
 }
 
 group = 'org.nowstart'
-version = '1.1.0'
+version = '1.1.1'
 
 springBoot {
     buildInfo()
