--- a/src/main/resources/config/common/application.yaml
+++ b/src/main/resources/config/common/application.yaml
@@ -14,12 +14,11 @@ management:
         include: "*"
     access:
       default: unrestricted
+    enabled-by-default: true # 하위 호환성
   endpoint:
     health:
       show-details: always
   info:
-    git:
-      mode: full
     os:
       enabled: true
     java:
