--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,8 +12,9 @@ spring:
         git:
           uri: https://github.com/now-start/config-service
           search-paths: src/main/resources/config/*
-        encrypt:
-          enabled: false
+
+encrypt:
+  key: ${ENCRYPT_KEY}
 
 eureka:
   client:
