feat: env 값 볼 수 있게 변경

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,6 +31,8 @@ management:
   endpoint:
     health:
       show-details: always
+    env:
+      show-values: always
   info:
     os:
       enabled: true
