--- a/src/main/resources/config/common/application.yaml
+++ b/src/main/resources/config/common/application.yaml
@@ -17,6 +17,8 @@ management:
   endpoint:
     health:
       show-details: always
+    env:
+      show-values: always
   info:
     os:
       enabled: true
