feat: gateway management 포트 변경

--- a/src/main/resources/config/gateway/gateway.yaml
+++ b/src/main/resources/config/gateway/gateway.yaml
@@ -14,3 +14,12 @@ spring:
             locator:
               enabled: true
               lower-case-service-id: true
+
+eureka:
+  instance:
+    metadata-map:
+      management.port: ${management.server.port}
+
+management:
+  server:
+    port: 8001
