--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'org.nowstart'
-version = '1.6.0'
+version = '1.7.0'
 
 springBoot {
     buildInfo()
@@ -34,6 +34,7 @@ ext {
 }
 
 dependencies {
+    implementation 'org.jolokia:jolokia-support-spring:2.2.9'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-config-server'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
