feat: discovery url 디폴트 설정

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,7 +21,7 @@ encrypt:
 eureka:
   client:
     service-url:
-      defaultZone: ${SERVICE_URL:}
+      defaultZone: http://eureka:8761/eureka
 
 management:
   endpoints:
