feat: 로그 래벨 설정

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -48,3 +48,6 @@ logging:
     path: ./logs
   charset:
     file: UTF-8
+  level:
+    com.netflix : warn
+    org.springframework.cloud.config : warn
