feat: 로그 개수 명시적으로 처리

--- a/src/main/resources/config/common/application.yaml
+++ b/src/main/resources/config/common/application.yaml
@@ -39,5 +39,8 @@ logging:
     file: UTF-8
   file:
     path: ./logs
+  logback:
+    rollingpolicy:
+      max-history: 7
   level:
     com.netflix : warn
