--- a/src/main/resources/config/common/application.yaml
+++ b/src/main/resources/config/common/application.yaml
@@ -19,6 +19,9 @@ management:
     web:
       exposure:
         include: "*"
+    jmx:
+      exposure:
+        include: "*"
     access:
       default: unrestricted
   endpoint:
