--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,6 +28,9 @@ management:
     web:
       exposure:
         include: "*"
+    jmx:
+      exposure:
+        include: "*"
     access:
       default: unrestricted
   endpoint:
