feat: 버스 리프레쉬 추가

--- a/src/main/resources/config/gateway/gateway.yaml
+++ b/src/main/resources/config/gateway/gateway.yaml
@@ -32,3 +32,16 @@ eureka:
 management:
   server:
     port: 8001
+
+security:
+  administrators:
+    - "/admin/applications/*/actuator/**"
+    - "/admin/instances/**"
+    - "/config/**"
+    - "/eureka/**"
+    - "/*/actuator/**"
+  personal: []
+  guest: []
+  publicPaths:
+    - "/nyang-nyang-bot/authorization/**"
+    - "/actuator/**"
