--- a/src/main/resources/config/gateway/gateway.yaml
+++ b/src/main/resources/config/gateway/gateway.yaml
@@ -44,4 +44,5 @@ security:
   guest: []
   publicPaths:
     - "/nyang-nyang-bot/authorization/**"
+    - "/nyang-nyang-bot/favorite/list"
     - "/actuator/**"
