--- a/src/main/resources/config/lotto/lotto.yaml
+++ b/src/main/resources/config/lotto/lotto.yaml
@@ -10,6 +10,7 @@ spring:
           auth: true
           starttls:
             enable: true
+            required: true
 
 lotto:
   init: ${LOTTO_INIT:false}
