feat: admin 페이지 추가

--- a/src/main/resources/config/admin/admin.yaml
+++ b/src/main/resources/config/admin/admin.yaml
@@ -1,2 +1,11 @@
 server:
   port: 9090
+
+spring:
+  boot:
+    admin:
+      ui:
+        external-views:
+          - label: "Swagger"
+            url: "https://spring.nowstart.org/admin/swagger-ui/index.html"
+            iframe: true
