feat: admin 외부 뷰 설정 수정 (라벨 변경 및 순서 추가)

--- a/src/main/resources/config/admin/admin.yaml
+++ b/src/main/resources/config/admin/admin.yaml
@@ -6,6 +6,7 @@ spring:
     admin:
       ui:
         external-views:
-          - label: "Swagger"
+          - label: "API 문서"
             url: "https://spring.nowstart.org/admin/swagger-ui/index.html"
+            order: 99
             iframe: true
