feat: error code and messages 추가

--- a/src/main/resources/config/common/application.yaml
+++ b/src/main/resources/config/common/application.yaml
@@ -52,3 +52,70 @@ logging:
   level:
     com.netflix : warn
     org.springframework.cloud.config : warn
+
+errors:
+  200:
+    SUCCESS:
+      code: 2000
+      message: "성공"
+  400:
+    INVALID_REQUEST:
+      code: 4000
+      message: "잘못된 요청입니다."
+    MISSING_PARAMETER:
+      code: 4001
+      message: "필수 파라미터가 없습니다."
+    INVALID_TYPE:
+      code: 4002
+      message: "파라미터 타입이 잘못되었습니다."
+    ALREADY_EXISTS:
+      code: 4003
+      message: "이미 존재하는 항목입니다."
+    LIMIT_EXCEEDED:
+      code: 4004
+      message: "제한을 초과했습니다."
+    VALUE_TOO_LONG:
+      code: 4005
+      message: "값이 너무 깁니다."
+    BUSINESS_RULE_VIOLATION:
+      code: 4006
+      message: "비즈니스 규칙 위반입니다."
+  401:
+    UNAUTHORIZED:
+      code: 4010
+      message: "인증이 필요합니다."
+    TOKEN_EXPIRED:
+      code: 4011
+      message: "토큰이 만료되었습니다."
+    INVALID_TOKEN:
+      code: 4012
+      message: "잘못된 토큰입니다."
+    SESSION_TIMEOUT:
+      code: 4013
+      message: "세션이 만료되었습니다."
+    DEVICE_BANNED:
+      code: 4014
+      message: "차단된 기기입니다."
+    ACCOUNT_LOCKED:
+      code: 4015
+      message: "계정이 잠겼습니다."
+  404:
+    USER_NOT_FOUND:
+      code: 4040
+      message: "사용자를 찾을 수 없습니다."
+    ITEM_NOT_FOUND:
+      code: 4041
+      message: "항목을 찾을 수 없습니다."
+    RESOURCE_NOT_FOUND:
+      code: 4042
+      message: "리소스를 찾을 수 없습니다."
+  500:
+    INTERNAL_ERROR:
+      code: 5000
+      message: "서버 오류가 발생했습니다."
+    DATABASE_ERROR:
+      code: 5001
+      message: "데이터베이스 처리 중 오류가 발생했습니다."
+    NETWORK_ERROR:
+      code: 5002
+      message: "네트워크 오류가 발생했습니다."
