--- a/src/main/resources/config/admin/admin.yaml
+++ b/src/main/resources/config/admin/admin.yaml
@@ -5,6 +5,7 @@ spring:
   boot:
     admin:
       ui:
+        public-url: https://spring.nowstart.org/admin
         external-views:
           - label: "API 문서"
             url: "https://spring.nowstart.org/admin/swagger-ui/index.html"
