feat: enable forwarded header support in gateway webflux configuration

--- a/src/main/resources/config/gateway/gateway.yaml
+++ b/src/main/resources/config/gateway/gateway.yaml
@@ -6,6 +6,9 @@ spring:
     gateway:
       server:
         webflux:
+          forwarded:
+            by:
+              enabled: true
           discovery:
             locator:
               enabled: true
