fix: correct admin UI public-url to include port 443

--- a/src/main/resources/config/admin/admin.yaml
+++ b/src/main/resources/config/admin/admin.yaml
@@ -5,7 +5,7 @@ spring:
   boot:
     admin:
       ui:
-        public-url: https://spring.nowstart.org/admin
+        public-url: https://spring.nowstart.org/admin:443
         external-views:
           - label: "API 문서"
             url: "https://spring.nowstart.org/admin/swagger-ui/index.html"
