fix: update gateway trusted-proxies and remove admin UI public-url configuration

--- a/src/main/resources/config/gateway/gateway.yaml
+++ b/src/main/resources/config/gateway/gateway.yaml
@@ -6,9 +6,7 @@ spring:
     gateway:
       server:
         webflux:
-          forwarded:
-            by:
-              enabled: true
+          trusted-proxies: ".*"
           discovery:
             locator:
               enabled: true
