--- a/src/main/resources/config/common/application.yaml
+++ b/src/main/resources/config/common/application.yaml
@@ -3,6 +3,10 @@ server:
   forward-headers-strategy: framework
 
 spring:
+  cloud:
+    circuitbreaker:
+      resilience4j:
+        disable-time-limiter: true
   jmx:
     enabled: true
   rabbitmq:
