fix: add nyang-nyang-bot actuator path to gateway publicPaths configuration

--- a/src/main/resources/config/gateway/gateway.yaml
+++ b/src/main/resources/config/gateway/gateway.yaml
@@ -43,6 +43,7 @@ security:
     - "/config/**"
     - "/eureka/**"
     - "/*/actuator/**"
+    - "/nyang-nyang-bot/actuator/**"
   personal: [ ]
   guest: [ ]
   publicPaths:
