Revert "fix: clean up actuator paths in gateway and update eureka metadata config"
This reverts commit a982d449f92484a219fcd258d4a445bf9663bb63.

--- a/src/main/resources/config/gateway/gateway.yaml
+++ b/src/main/resources/config/gateway/gateway.yaml
@@ -42,8 +42,10 @@ security:
     - "/admin/instances/**"
     - "/config/**"
     - "/eureka/**"
+    - "/*/actuator/**"
   personal: [ ]
   guest: [ ]
   publicPaths:
     - "/nyang-nyang-bot/**"               # 자체 인증
+    - "/actuator/**"                      # 게이트웨이 엑추에이터
     - "/config/actuator/busrefresh"       # github action
