fix: update gateway configuration to adjust actuator and public paths

--- a/src/main/resources/config/gateway/gateway.yaml
+++ b/src/main/resources/config/gateway/gateway.yaml
@@ -40,12 +40,12 @@ security:
   administrators:
     - "/admin/applications/*/actuator/**"
     - "/admin/instances/**"
+    - "/*/actuator/**"
     - "/config/**"
     - "/eureka/**"
-    - "/*/actuator/**"
+    - "/nyang-nyang-bot/actuator/*"
   personal: [ ]
   guest: [ ]
   publicPaths:
     - "/nyang-nyang-bot/**"               # 자체 인증
-    - "/actuator/**"                      # 게이트웨이 엑추에이터
     - "/config/actuator/busrefresh"       # github action
