--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'org.nowstart'
-version = '2.1.1'
+version = '2.1.2'
 
 springBoot {
     buildInfo()
@@ -52,4 +52,13 @@ dependencyManagement {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+bootBuildImage {
+    buildpacks = [
+            "docker.io/paketobuildpacks/java",
+            "docker.io/paketobuildpacks/opentelemetry"
+    ]
+
+    environment.put("BP_OPENTELEMETRY_ENABLED", "true")
 }
