fix: extend gateway configuration with new admin asset and script paths

--- a/src/main/resources/config/gateway/gateway.yaml
+++ b/src/main/resources/config/gateway/gateway.yaml
@@ -35,6 +35,8 @@ security:
     - "/admin/wallboard"
     - "/admin/journal"
     - "/admin/external"
+    - "/admin/assets/**"
+    - "/admin/*.js"
   publicPaths:
     - "/config/actuator/busrefresh"       # github action
     - "/*/actuator/**"                    # 엑추에이터
