fix: broaden swagger-ui path in gateway configuration

--- a/src/main/resources/config/gateway/gateway.yaml
+++ b/src/main/resources/config/gateway/gateway.yaml
@@ -37,7 +37,7 @@ security:
     - "/admin/external"
     - "/admin/assets/**"
     - "/admin/*.*"
-    - "/admin/swagger-ui/index.html"
+    - "/admin/swagger-ui/**"
   publicPaths:
     - "/config/actuator/busrefresh"       # github action
     - "/*/actuator/**"                    # 엑추에이터
